Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-11227

iphlpapi AllocateAndGet*Table functions access the output table uninitialized

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.2
    • RosDlls

    Description

      It's not technically used since size is passed as 0, but it should be nulled anyway. Also if something goes wrong these functions don't free their buffers.

      CID 716757

      Attachments

        Activity

          People

            ThFabba ThFabba
            ThFabba ThFabba
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: