[IPHLPAPI] - Don't use uninitialized values in AllocateAndGet*TableFromStack functions. CID 716757 - Free buffers on failure CORE-11227 #resolve

svn path=/trunk/; revision=71308